[package]
name = "shortest_path"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbfreader = "0.15.2"
rayon = "1.5.3"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
lazy_static = "1.4.0"

[dependencies.sdl2]
version = "0.35.1"
default-features = false
features = ["image"]
